# cargo-txt

./: .gitignore  AGENTS.md  Cargo.toml  DOCS.md  LICENSE  README.md
.github/workflows/: rust.yaml
.zed/agent/: backlogs.md
.zed/agent/docs/: rust-error-trait.md  type-alias-format.md
.zed/agent/guidelines/: docs.md  git-commit.md  readme.md  rust-control-flow.md  rust-documentation.md  rust-error-handling-bin.md  rust-error-handling-lib.md  rust-testing.md  rust.md  writing-docs.md  writing-readme.md  writing-rust-control-flow.md  writing-rust-documentation.md  writing-rust-error-handling.md  writing-rust-testing.md  writing-rust.md
.zed/agent/instructions/: create-git-commit-message.md  create-plan.md  review-changes.md
.zed/agent/plans/: 001-cli-overview.md  002-build-01.md  002-build-02.md  002-build-03.md  002-build-04.md  002-build-05.md  002-build.md  003-type-alias-parse-html.md  004-refactor-error-handling.md  005-fix-cli-help-text.md  006-validate-crate-and-use-metadata-target-dir.md  007-support-feature-flags.md  008-html-to-markdown-conversion.md  009-refactor-debug-logging-with-env-logger.md  010-improve-html-to-markdown-conversion.md  011-implement-open-command.md  012-rename-crate-to-txt.md  013-rename-open-to-show.md  014-refactor-error-messages-for-llm.md  015-refactor-to-anyhow.md  016-add-list-command-and-refactor-show.md  017-enhance-list-command-output.md  018-crate-name-vs-library-name.md  019-fix-crate-item-markdown-rendering.md  020-refactor-logging-to-tracing.md  021-fix-dev-dependency-build.md  (+3 more)
.zed/agents/: BACKLOGS.md
src/: cargo.rs  error.rs  html2md.rs  main.rs
src/commands/: browse.rs  build.rs  generate.rs  list.rs  mod.rs  open.rs  show.rs
src/items/: mod.rs  type_alias.rs
src/markdown/: enum.rs  index.rs  mod.rs  struct.rs  type_alias.rs  union.rs  utils.rs
(+6 files in other folders)
