[package]
name = "docmd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cargo-docmd"
path = "src/main.rs"

[dependencies]
rustdoc-types = "0.57.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
clap = { version="4.5.54", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
scraper = "0.25.0"
log = "0.4.29"
env_logger = "0.11.8"

[dev-dependencies]
tempfile = "3.24.0"
