[package]
name = "txt"
description = "cargo doc for coding agents"
version = "0.1.4"
license = "MIT"
repository = "https://github.com/pyk/cargo-txt"
edition = "2024"

[[bin]]
name = "cargo-txt"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0.100"

# CLI
clap = { version="4.5.54", features = ["derive"] }
clap-verbosity-flag = { version="3.0.4", features = ["tracing"] }

# Logging & Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# JSON Stuff
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

rustdoc-types = "0.57.0"
scraper = "0.25.0"

[dev-dependencies]
tempfile = "3.24.0"
# for debugging
serde_path_to_error = "0.1.20"

[lints.clippy]
single_match = "allow"
